# qa_app

./: .gitignore  README.md  run
client/: .gitignore  package-lock.json  package.json
client/src/: App.js  index.css
flask-server/: requirements.txt  server.py
qa_model/: README.md  bentofile.yaml  pyproject.toml  requirements.txt  service.py
